# Carla-simulation

./: README.md
carla_example_for_ivrc/: .gitignore
carla_example_for_ivrc/src/: manual_control_for_ivrc.py
carla_example_for_ivrc/src/carla_ros_joint_simulation/: CMakeLists.txt  package.xml
carla_example_for_ivrc/src/carla_ros_joint_simulation/include/carla_ros_joint_simulation/: receive_msg_from_carla.h
carla_example_for_ivrc/src/carla_ros_joint_simulation/src/carla_ros_joint_simulation/: carla_ros_node.cpp  receive_msg_from_carla.cpp
carla_example_for_ivrc/src/python_api/: manual_control_for_ivrc.py  spawn_npc.py
tutorial/: Installation and Basic pythonAPI.md
